# HireDrift

./: .gitignore  README.md  package.json  requirements.txt
.github/: CODEOWNERS
Backend/: .env.example  README.md  backend_details.txt  debug_db.py  debug_output.txt  debug_parser.py  fix_match_timestamps.py  inspect_data.py  main.py  pyproject.toml  reproduce_cors.py  requirements.txt  setup_email.py  verify_email.py
Backend/alembic/: env.py
Backend/migrations/: add_report_history_table.sql
Backend/models/: __init__.py  base.py  candidate_match_model.py  candidate_model.py  companies_model.py  interview_model.py  job_description_model.py  report_history_model.py  resume_model.py  shortlist_model.py  user_model.py
Backend/routes/: admin_route.py  candidate_route.py  company_route.py  dashboard_route.py  interview_route.py  jd_route.py  matching_route.py  public_route.py  resume_route.py  shortlist_route.py  user_route.py
Backend/schemas/: candidate_schema.py  company_schema.py  dashboard_schema.py  interview_schema.py  jd_schema.py  matching_schema.py  report_history_schema.py  shortlist_schema.py  user_schema.py
Backend/services/: candidate_service.py  company_service.py  dashboard_service.py  email_service.py  jd_service.py  matching_service.py  resume_service.py  shortlist_service.py  user_service.py
Backend/tests/: conftest.py  test_company_routes.py  test_jd_routes.py  test_main.py  test_resume_routes.py  test_user_routes.py
Backend/utils/: log_config.py  mail.py  resume_parser.py  security.py  sendgrid_mail.py  utility.py
Frontend/: Index.html  (+3 more)
(+131 files in other folders)
