[project]
name = "backend"
version = "0.1.0"
description = "SBERT based resume parser and analytics"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.17.2",
    "fastapi-mail>=1.5.8",
    "fastapi[standard]>=0.121.2",
    "numpy>=2.3.4",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.10.1",
    "pymupdf>=1.26.6",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.5",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "argon2-cffi>=25.1.0",
    "sendgrid>=6.12.5",
]
